bg-color unique and search,sort alignment issues

--- a/src/assets/admin/layout2/css/layout.css
+++ b/src/assets/admin/layout2/css/layout.css
@@ -2070,7 +2070,7 @@ Page content
   background-color: #fff;
 }
 .page-container-bg-solid .page-content {
-  background: #F1F3FA;
+  background-color: #f1f3fa;
 }
 .page-full-width .page-content {
   margin-left: 0px !important;
@@ -2086,7 +2086,7 @@ Page content
   .page-content-wrapper .page-content {
     margin-left: 195px;
     margin-top: 0px;
-    min-height: 600px;
+    min-height: 1100px;
     padding: 25px 20px 10px 20px;
   }
   .page-content-wrapper .page-content.no-min-height {
