--- a/src/assets/admin/layout2/css/themes/grey.css
+++ b/src/assets/admin/layout2/css/themes/grey.css
@@ -18,7 +18,7 @@ Page Header
 }
 .page-header.navbar .page-top {
   box-shadow: 0px 1px 10px 0px rgba(50, 50, 50, 0.2);
-  background: #ffffff;
+  background: #fff;
 }
 .page-header.navbar .top-menu .navbar-nav {
   /* Extended Dropdowns */
