--- a/src/assets/admin/pages/css/portfolio.css
+++ b/src/assets/admin/pages/css/portfolio.css
@@ -15,7 +15,7 @@ Portfolio
 .mix-filter li {
   color: #555;
   cursor: pointer;
-  padding: 6px 15px;
+  padding: 7px 15px;
   margin-right: 2px;
   margin-bottom: 5px;
   background: #f1f3fa;
