--- a/src/assets/global/css/components-rounded.css
+++ b/src/assets/global/css/components-rounded.css
@@ -3755,7 +3755,7 @@ Input icons
 }
 .input-icon.right > .form-control {
   padding-right: 33px;
-  padding-left: 12px;
+  padding-left: 5px;
 }
 .input-group .input-icon.right > .form-control {
   -webkit-border-radius: 0 4px 4px 0;
